# seahorse

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
doc/examples/: getting_started.ipynb
seahorse/: C.py  __init__.py  cli.py  experiment.py  multi_well.py  petab.py
tests/: test_multiwell.py
